# learning_log

./: README.md  db.sqlite3  pyproject.toml
cicd/: buildspec.yml
docker/: Dockerfile
learning_log/: asgi.py  settings.py  urls.py  wsgi.py
learning_log.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_learning_log.py
