[tool.poetry]
name = "learning_log"
version = "0.1.0"
description = ""
authors = ["Tom Dugan <tom@dugan.email>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
